--- a/DashEDA_Binder.ipynb
+++ b/DashEDA_Binder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -49,12 +49,35 @@
     "data_dict[1][1] #explained variance\n",
     "data_dict[1][2] #sizes dataframe\n",
     "\n",
-    "print()"
+    "print()\n",
+    "\n",
+    "n_components = 2\n",
+    "col_names = [f\"Principal Component {x+1}\" for x in range(n_components)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys([1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dict.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +92,7 @@
     "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
     "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
     "\n",
-    "months = [int(x) for x in sorted(long_data.month.unique())]\n",
+    "months = [int(x) for x in sorted(data_dict.keys())]\n",
     "# print(months)\n",
     "month_min = min(months)\n",
     "month_max = max(months)\n",
